package io.testagle.core;

//Code generation performed by sbt-scalabuff plugin

option java_package = "io.testagle.core";
option java_outer_classname = "TestagleProto";

message TestagleProtocol{

    enum MessageType {
      LOAD_DESCRIPTION = 0;
      LOAD_STATS = 1;
      UNLOAD_COMMAND = 2;
      RUNTEST_COMMAND = 3;
      OK = 4;
      ERROR = 5;
    }

    required MessageType type = 1;
    optional LoadDescription loadDescription = 2;
    optional LoadStats loadStats = 3;
    optional Unload unload = 4;
    optional RunTest runTest = 5;
    optional Ok ok = 6;
    optional Error error = 7;


    message LoadDescription {
        required string uri = 1;
        required int32 concurrency = 2;
        required int32 totalRequests = 3;
        required bytes data = 4;
        required string testClass = 5;
    }

    message LoadStats {
      required string nodeName = 1;
      required int32 completedRequests = 2;
      required int32 totalRequests = 3;
      required int32 errors = 4;
      required float minLatency = 5;
      required float avgLatency = 6;
      required float meanLatency = 7;
      required float latency95 = 8;
    }

    message Unload {
        required string testID = 1;
    }

    message RunTest {
        required string testID = 1;
    }

    message Ok {
      required string testID = 1;
    }

    message Error {
      required string text = 1;
    }
}